--- a/gnl/CMakeLists.txt
+++ b/gnl/CMakeLists.txt
@@ -1,13 +1,13 @@
 add_subdirectory(src)
 
-file(GLOB libft_tests_SRCS ${libft_tests_SRCS} ${CMAKE_CURRENT_LIST_DIR}/test_*.c)
-foreach (libft_tests_SRC ${libft_tests_SRCS})
-  get_filename_component(libft_test_NAME ${libft_tests_SRC} NAME_WE)
-  set(test ${libft_test_NAME})
-  add_executable(${test} ${libft_tests_SRC})
-  add_dependencies(${test} ft)
+file(GLOB gnl_tests_SRCS ${gnl_tests_SRCS} ${CMAKE_CURRENT_LIST_DIR}/test_*.c)
+foreach (gnl_tests_SRC ${gnl_tests_SRCS})
+  get_filename_component(gnl_test_NAME ${gnl_tests_SRC} NAME_WE)
+  set(test ${gnl_test_NAME})
+  add_executable(${test} ${gnl_tests_SRC})
+  add_dependencies(${test} gnl)
   add_dependencies(check ${test})
-  target_link_libraries(${test} ft)
+  target_link_libraries(${test} gnl ft)
   target_compile_definitions(${test}
     PRIVATE $<$<CONFIG:Debug>:DEBUG>$<$<CONFIG:Release>:NDEBUG>)
   add_test(${test} ${test} WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR})
