--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "gnl/src"]
 	path = gnl/src
 	url = https://github.com/uael/gnl.git
+[submodule "fillit/src"]
+	path = fillit/src
+	url = https://github.com/uael/fillit.git
