--- a/fillit/CMakeLists.txt
+++ b/fillit/CMakeLists.txt
@@ -1,13 +1,13 @@
 add_subdirectory(src)
 
-file(GLOB gnl_tests_SRCS ${gnl_tests_SRCS} ${CMAKE_CURRENT_LIST_DIR}/test_*.c)
-foreach (gnl_tests_SRC ${gnl_tests_SRCS})
-  get_filename_component(gnl_test_NAME ${gnl_tests_SRC} NAME_WE)
-  set(test ${gnl_test_NAME})
-  add_executable(${test} ${gnl_tests_SRC})
-  add_dependencies(${test} gnl)
+file(GLOB fillit_tests_SRCS ${fillit_tests_SRCS} ${CMAKE_CURRENT_LIST_DIR}/test_*.c)
+foreach (fillit_tests_SRC ${fillit_tests_SRCS})
+  get_filename_component(fillit_test_NAME ${fillit_tests_SRC} NAME_WE)
+  set(test ${fillit_test_NAME})
+  add_executable(${test} ${fillit_tests_SRC})
+  add_dependencies(${test} fillit)
   add_dependencies(check ${test})
-  target_link_libraries(${test} gnl ft)
+  target_link_libraries(${test} fillit ft)
   target_compile_definitions(${test}
     PRIVATE $<$<CONFIG:Debug>:DEBUG>$<$<CONFIG:Release>:NDEBUG>)
   add_test(${test} ${test} WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR})
